# luaffi

./: .gitignore  LICENSE  README.md  build.gradle
src/androidTest/java/top/oslorde/luaffi/: ExampleInstrumentedTest.java
src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  call.c  call_arm.dasc  call_arm.h  call_arm64.dasc  call_arm64.h  call_arm_hf.h  call_x64.h  call_x64win.h  call_x86.h  ctype.c  ffi.c  ffi.h  luaffitest.lua  parser.c  test.c  test_runner.c  update.bat
src/test/java/top/oslorde/luaffi/: ExampleUnitTest.java
